Fixed broken nav collapse on dewars site

--- a/Pages/Dewars_Cleaning/style.css
+++ b/Pages/Dewars_Cleaning/style.css
@@ -3,7 +3,7 @@
 .navbar {
     padding-top:25px;
 	background-color:#99ccff;
-	height:110px;
+	height:auto;
 
 
 }
